syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.atmon.compt.grpc";
option go_package = "github.com/atmom/compt/grpc";

package compt;

// Services of atmon component server.
service Compt {
    // Flow executed finished.
    rpc FlowFinish (FlowFinishRequest) returns (FlowFinishResponse) {}
}

// Flow finish request.
message FlowFinishRequest {
    // Flow ID.
    string flowId = 1;

    // Flow version.
    string version = 2;

    // Last node of flow.
    FlowNode last = 3;
}

// Flow finish response.
message FlowFinishResponse {
    // Responsed code from component server.
    int32 code = 1;

    // Responsed message from component server.
    string message = 2;
}

// Flow node.
message FlowNode {
    // Flow node ID.
    string id = 1;

    // Flow node name.
    string name = 2;

    // Flow node description.
    string desc = 3;

    // Flow node server type, values are 'Golang','Java' or 'NodeJS'.
    string type = 4;

    // Flow context define.
    string context = 5;
}